--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -95,7 +95,7 @@
                                  </div>
                               </li>
                               <li>
-                                 <a href="#">区域一览</a>
+                                 <a href="zone.html">区域一览</a>
                               </li>
                               <!--登录后隐藏-->
                               <li id="login">
