--- a/src/main/resources/static/html/zone.html
+++ b/src/main/resources/static/html/zone.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh" xmlns="http://www.w3.org/1999/html">
 <head>
     <!-- basic -->
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>虫害管理 CPPMS</title>
+    <title>区域一览 CPPMS</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -29,7 +29,6 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/plugin.js"></script>
-    <script src="../js/logout.js"></script>
     <!-- Scrollbar Js Files -->
     <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="../js/custom.js"></script>
@@ -42,9 +41,11 @@
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table.js"></script>
+    <script src="../js/logout.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table-zh-CN.js"></script>
-    <script src="../js/bug.js"></script>
+    <script src="../js/zone.js"></script>
     <script src="../js/isLogin.js"></script>
+
 </head>
 <!-- body -->
 <body class="main-layout" onload="createCode()">
@@ -101,7 +102,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li>
+                                <li class="active">
                                     <a href="zone.html">区域一览</a>
                                 </li>
                                 <!--登录后隐藏-->
@@ -129,12 +130,14 @@
     </div>
     <!-- end header inner -->
 </header>
+
+
 <div class="Marketing-bg">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="Marketingheading">
-                    <h3>虫害管理</h3>
+                    <h3>区域一览</h3>
                 </div>
             </div>
         </div>
@@ -144,13 +147,27 @@
 
 <!-- end section -->
 <!-- section -->
+
 <div class="container">
+    <div class="form-group">
+        <br>
+        <div class="form-inline row">
+            <input type="text" id="area" class="form-control date-input" placeholder="地区" width="20%">
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <input type="text" id="forest" class="form-control date-input" placeholder="优势树种" width="20%">
+            <label>&nbsp;&nbsp;</label>
+            <input type="text" id="team" class="form-control date-input" placeholder="管理小队" width="20%">
+            <label>&nbsp;&nbsp;</label>
+            <button onclick="searchedTable($('#area').val(),$('#forest').val(),$('#team').val())" type="button" id="submit"
+                    class="btn btn-primary" style="margin-top:0">查询
+            </button>
+        </div>
+    </div>
 
     <table id="mytable"></table>
 
 </div>
 </body>
-
 <style>
     button.btn.btn-default {
         display: none;
