--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -26,6 +26,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/captGenerate.js"></script>
     <script src="../js/register.js"></script>
+    <script src="../js/logout.js"></script>
     <script src="../js/isLogin.js"></script>
 </head>
 <!-- body -->
@@ -82,7 +83,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a href="#">区域一览</a>
+                                    <a href="zone.html">区域一览</a>
                                 </li>
                                 <!--登录后隐藏-->
                                 <li id="login" >
@@ -93,7 +94,7 @@
                                     <a href="register.html">注册</a>
                                 </li>
                                 <!--未登录时隐藏-->
-                                <li id="logout">
+                                <li id="logout" onclick="logoutAction()">
                                     <a href="#">登出</a>
                                 </li>
                                 <!--未登录时隐藏-->
