药物一览以及管理功能实装

--- a/src/main/resources/static/html/bug.html
+++ b/src/main/resources/static/html/bug.html
@@ -81,7 +81,7 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="#">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
+                                            <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
                                             <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                         </div>
@@ -129,6 +129,7 @@
     </div>
     <!-- end header inner -->
 </header>
+
 <div class="Marketing-bg">
     <div class="container">
         <div class="row">
