--- a/src/main/resources/static/html/dashboard.html
+++ b/src/main/resources/static/html/dashboard.html
@@ -63,7 +63,7 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="#">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
+                                            <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
                                             <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                         </div>
@@ -84,7 +84,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a href="#">区域一览</a>
+                                    <a href="zone.html">区域一览</a>
                                 </li>
                                 <!--登录后隐藏-->
                                 <li id="login">
@@ -111,6 +111,7 @@
     </div>
     <!-- end header inner -->
 </header>
+
 <!-- header -->
 <div class="Marketing-bg">
     <div class="container">
@@ -185,6 +186,26 @@
                         </div>
                         <div class="col-md-2">
                             <a class="reply_bt" href="zoneManage.html">进入</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="full comment_blog_line">
+
+                    <div class="row">
+                        <div class="col-md-1">
+                            <img src="../images/药箱.png" alt="#"/>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="full contact_text">
+                                <h3>药剂管理</h3>
+                                <br>
+                                <p>管理以及检索药剂以及器械相关信息
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="reply_bt" href="medicationManage.html">进入</a>
                         </div>
                     </div>
                 </div>
