--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -56,7 +56,7 @@
                <div class="col-lg-3 logo_section">
                   <div class="full">
                      <div class="center-desk">
-                        <div class="logo"> <a href="index.html"><img src="../images/logo.png" alt="#"></a> </div>
+                        <div class="logo"><a href="index.html"><img src="../images/logo.png" alt="#"></a></div>
                      </div>
                   </div>
                </div>
@@ -65,17 +65,18 @@
                      <div class="limit-box">
                         <nav class="main-menu">
                            <ul class="menu-area-main">
-                              <li class="active">
-                                 <a href="index.html">首页</a>
+                              <li>
+                                 <a href="index.html" class="active">首页</a>
                               </li>
                               <li>
                                  <div class="dropdown">
-                                    <button type="button" id="btn1" class="btn dropdown-toggle" data-toggle="dropdown">
+                                    <button type="button" id="btn1" class="btn dropdown-toggle"
+                                            data-toggle="dropdown">
                                        灾情防治
                                     </button>
                                     <div class="dropdown-menu">
-                                       <a class="dropdown-item" style="color: black" href="expert.html">专家一览</a>
-                                       <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
+                                       <a class="dropdown-item" style="color: black" href="#">专家一览</a>
+                                       <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
                                        <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                        <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                     </div>
@@ -84,7 +85,8 @@
                               <li>
                                  <!--虫/鼠害...害信息查询-->
                                  <div class="dropdown">
-                                    <button type="button" id="btn2" class="btn dropdown-toggle" data-toggle="dropdown">
+                                    <button type="button" id="btn2" class="btn dropdown-toggle"
+                                            data-toggle="dropdown">
                                        资料检索
                                     </button>
                                     <div class="dropdown-menu">
