--- a/src/main/resources/static/html/zone.html
+++ b/src/main/resources/static/html/zone.html
@@ -82,7 +82,7 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="#">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
+                                            <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
                                             <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                         </div>
@@ -102,8 +102,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="active">
-                                    <a href="zone.html">区域一览</a>
+                                <li>
+                                    <a href="zone.html" class="active">区域一览</a>
                                 </li>
                                 <!--登录后隐藏-->
                                 <li id="login">
@@ -131,7 +131,6 @@
     <!-- end header inner -->
 </header>
 
-
 <div class="Marketing-bg">
     <div class="container">
         <div class="row">
@@ -154,7 +153,7 @@
         <div class="form-inline row">
             <input type="text" id="area" class="form-control date-input" placeholder="地区" width="20%">
             <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
-            <input type="text" id="forest" class="form-control date-input" placeholder="优势树种" width="20%">
+            <input type="text" id="forest" class="form-control date-input" placeholder="林种" width="20%">
             <label>&nbsp;&nbsp;</label>
             <input type="text" id="team" class="form-control date-input" placeholder="管理小队" width="20%">
             <label>&nbsp;&nbsp;</label>
