--- a/src/main/resources/static/html/zoneManage.html
+++ b/src/main/resources/static/html/zoneManage.html
@@ -107,7 +107,7 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="#">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
+                                            <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
                                             <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                         </div>
@@ -180,7 +180,7 @@
             <label>搜索区域： </label>
             <input type="text" id="area" class="form-control date-input" placeholder="地区" width="20%">
             <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
-            <input type="text" id="forest" class="form-control date-input" placeholder="优势树种" width="20%">
+            <input type="text" id="forest" class="form-control date-input" placeholder="林种" width="20%">
             <label>&nbsp;&nbsp;</label>
             <input type="text" id="team" class="form-control date-input" placeholder="管理小队" width="20%">
             <label>&nbsp;&nbsp;</label>
