--- a/src/main/resources/static/html/log.html
+++ b/src/main/resources/static/html/log.html
@@ -82,7 +82,7 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="#">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
+                                            <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
                                             <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                         </div>
@@ -130,7 +130,6 @@
     </div>
     <!-- end header inner -->
 </header>
-
 
 <div class="Marketing-bg">
     <div class="container">
