--- a/src/main/resources/static/html/medicationManage.html
+++ b/src/main/resources/static/html/medicationManage.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>药剂一览 CPPMS</title>
+    <title>药剂管理 CPPMS</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -45,6 +45,47 @@
     <script src="../bootstrap-table-master/js/bootstrap-table-zh-CN.js"></script>
     <script src="../js/medicament.js"></script>
     <script src="../js/isLogin.js"></script>
+    <script>
+        $(function () {
+            $("#aSubmit").click(function () {
+                $.ajax({
+                    url: "manage/addMedication.action",
+                    type: "POST",
+                    data: {
+                        med_id: 114514,
+                        med_name: $("#aName").val(),
+                        med_ptype: $("#apType option:selected").val(),
+                        med_type: $("#aType option:selected").val(),
+                        med_purpose: $("#aPurpose").val(),
+                        med_count: $("#aCount").val()
+                    },
+                    success: function (status) {
+                        if (status === "true") {
+                            resetTable()
+                        } else {
+                            alert("增加失败！")
+                        }
+                    },
+                })
+            })
+            $("#dSubmit").click(function () {
+                $.ajax({
+                    url: "manage/delMedication.action",
+                    type: "POST",
+                    data: {
+                        id: $("#dId").val()
+                    },
+                    success: function (status) {
+                        if (status === "true") {
+                            resetTable()
+                        } else {
+                            alert("删除失败！")
+                        }
+                    },
+                })
+            })
+        })
+    </script>
 
 </head>
 <!-- body -->
@@ -82,7 +123,8 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="#">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
+                                            <a class="dropdown-item" style="color: black"
+                                               href="medication.html">药剂一览</a>
                                             <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                         </div>
@@ -137,7 +179,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="Marketingheading">
-                    <h3>药剂一览</h3>
+                    <h3>药剂管理</h3>
                 </div>
             </div>
         </div>
@@ -152,6 +194,7 @@
     <div class="form-group">
         <br>
         <div class="form-inline row">
+            <label>搜索药剂： </label>
             <input type="text" id="name" class="form-control date-input" placeholder="名称" width="20%">
             <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <select id="pType" class="form-control">
@@ -165,9 +208,46 @@
                 <option value="器械">器械</option>
             </select>
             <label>&nbsp;&nbsp;</label>
-            <button onclick="searchedTable($('#name').val(),$('#pType option:selected').val(),$('#type option:selected').val())" type="button" id="submit"
+            <button onclick="searchedTable($('#name').val(),$('#pType option:selected').val(),$('#type option:selected').val())"
+                    type="button" id="submit"
                     class="btn btn-primary" style="margin-top:0">查询
             </button>
+        </div>
+        <br>
+        <div class="form-inline row">
+            <label>添加药物： </label>
+            <input type="text" id="aName" class="form-control date-input" placeholder="名称" width="20%">
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <select id="apType" class="form-control">
+                <option value="虫害">虫害</option>
+                <option value="鼠害">鼠害</option>
+                <option value="病害">病害</option>
+            </select>
+            <label>&nbsp;&nbsp;</label>
+            <select id="aType" class="form-control">
+                <option value="药剂">药剂</option>
+                <option value="器械">器械</option>
+            </select>
+            <label>&nbsp;&nbsp;</label>
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <input type="text" id="aPurpose" class="form-control date-input" placeholder="作用" style="width: 25%">
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <input type="text" id="aCount" class="form-control date-input" placeholder="数量" style="width: 10%">
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <button id="aSubmit"
+                    class="btn btn-primary" style="margin-top:0">添加
+            </button>
+        </div>
+        <br>
+        <div class="form-inline row">
+            <label>删除药物： </label>
+            <input type="text" id="dId" class="form-control date-input" placeholder="id">
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <button id="dSubmit"
+                    class="btn btn-primary" style="margin-top:0;margin-right:1%">删除
+            </button>
+            <button onclick="resetTable()" class="btn btn-primary" style="margin-top:0">重置</button>
+
         </div>
     </div>
 
@@ -178,6 +258,15 @@
 <style>
     button.btn.btn-default {
         display: none;
+    }
+
+    button.btn.btn-default {
+        display: none;
+    }
+
+    label {
+        font-size: 18px;
+        color: #52565a;
     }
 </style>
 </html>
