三害全功能跑通完成

--- a/src/main/resources/static/html/bug.html
+++ b/src/main/resources/static/html/bug.html
@@ -146,6 +146,18 @@
 <!-- end section -->
 <!-- section -->
 <div class="container">
+    <div class="form-group">
+        <br>
+        <div class="form-inline row">
+            <input type="text" id="area" class="form-control date-input" placeholder="害虫名" width="20%">
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <input type="text" id="forest" class="form-control date-input" placeholder="寄主" width="20%">
+            <label>&nbsp;&nbsp;</label>
+            <button onclick="searchedTable($('#area').val(),$('#forest').val(),$('#team').val())" type="button" id="submit"
+                    class="btn btn-primary" style="margin-top:0">查询
+            </button>
+        </div>
+    </div>
 
     <table id="mytable"></table>
     <!-- 模态框（Modal） -->
@@ -156,9 +168,6 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                         &times;
                     </button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        模态框（Modal）标题
-                    </h4>
                 </div>
                 <table id="modeltable">
 
