--- a/src/main/resources/static/html/mouse.html
+++ b/src/main/resources/static/html/mouse.html
@@ -42,7 +42,7 @@
     <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table-zh-CN.js"></script>
-    <script src="../js/sickness.js"></script>
+    <script src="../js/mouse.js"></script>
 </head>
 
 <!--<body onload="createCode()">
@@ -136,8 +136,40 @@
 
 <!-- end section -->
 <!-- section -->
+<div class="container">
 
+    <div class="form-group">
+        <br>
+        <div class="form-inline row">
+            <input type="text" id="area" class="form-control date-input" placeholder="老鼠名称" width="20%">
+            <label class="date-label">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <label>&nbsp;&nbsp;</label>
+            <button onclick="searchedTable($('#area').val(),$('#forest').val(),$('#team').val())" type="button" id="submit"
+                    class="btn btn-primary" style="margin-top:0">查询
+            </button>
+        </div>
+    </div>
 
 <table id="mytable"></table>
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+            </div>
+            <table id="modeltable">
+
+            </table>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+</div>
 </body>
 </html>
