更改了expert的sql错误语句，增加了查询，添加功能，以及record

--- a/src/main/resources/static/html/dashboard.html
+++ b/src/main/resources/static/html/dashboard.html
@@ -210,6 +210,25 @@
                     </div>
                 </div>
 
+                <div class="full comment_blog_line">
+
+                    <div class="row">
+                        <div class="col-md-1">
+                            <img src="../images/会议.png" alt="#"/>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="full contact_text">
+                                <h3>会商记录</h3>
+                                <br>
+                                <p>管理以及记录专家会商结果相关信息
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="reply_bt" href="record.html">进入</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
