--- a/src/main/resources/static/html/expert.html
+++ b/src/main/resources/static/html/expert.html
@@ -177,7 +177,7 @@
             <label>&nbsp;&nbsp;</label>
             <input type="text" id="aphone" class="form-control date-input" placeholder="电话"  style="width: 15%">
             <label>&nbsp;&nbsp;</label>
-            <button onclick="searchedTable($('#aname').val(),$('#acompany').val(),$('#aexpertise').val(),$('#apost').val(),$('#aphone').val())" type="button" id="add"
+            <button onclick="searchedTable($('#name').val(),$('#company').val(),$('#expertise').val(),$('#post').val(),$('#phone').val())" type="button" id="add"
                     class="btn btn-primary" style="margin-top:0">添加
             </button>
         </div>
@@ -194,20 +194,6 @@
     }
 </style>
 </html>
-
-<div class="Marketing-bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="Marketingheading">
-                    <h3>专家一览</h3>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 <!-- end section -->
 <!-- section -->
 <table id="mytable"></table>
