--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -75,7 +75,7 @@
                                        灾情防治
                                     </button>
                                     <div class="dropdown-menu">
-                                       <a class="dropdown-item" style="color: black" href="#">专家一览</a>
+                                       <a class="dropdown-item" style="color: black" href="expert.html">专家一览</a>
                                        <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
                                        <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                        <a class="dropdown-item" style="color: black" href="#">事件记录</a>
