--- a/src/main/resources/static/html/sickness.html
+++ b/src/main/resources/static/html/sickness.html
@@ -51,8 +51,76 @@
 </div>-->
 <!-- end loader -->
 <!-- header -->
-
+<header>
+    <!-- header inner -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 logo_section">
+                <div class="full">
+                    <div class="center-desk">
+                        <div class="logo"> <a href="index.html"><img src="../images/logo.png" alt="#"></a> </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="menu-area">
+                    <div class="limit-box">
+                        <nav class="main-menu">
+                            <ul class="menu-area-main">
+                                <li>
+                                    <a href="index.html">首页</a>
+                                </li>
+                                <li>
+                                    <div class="dropdown">
+                                        <button type="button" id="btn1" class="btn dropdown-toggle" data-toggle="dropdown">
+                                            灾情防治
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" style="color: black" href="#">区域一览</a>
+                                            <a class="dropdown-item" style="color: black" href="#">专家一览</a>
+                                            <a class="dropdown-item" style="color: black" href="#">小班管理</a>
+                                            <a class="dropdown-item" style="color: black" href="#">事件记录</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <!--虫/鼠害...害信息查询-->
+                                    <div class="dropdown">
+                                        <button type="button" id="btn2" class="btn dropdown-toggle" data-toggle="dropdown">
+                                            资料检索
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" style="color: black" href="#">虫害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="#">病害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <!--登录后隐藏-->
+                                <li id="login" >
+                                    <a href="login.html">登录</a>
+                                </li>
+                                <!--登录后隐藏-->
+                                <li id="register">
+                                    <a href="register.html">注册</a>
+                                </li>
+                                <!--未登录时隐藏-->
+                                <li id="logout">
+                                    <a href="#">登出</a>
+                                </li>
+                                <!--未登录时隐藏-->
+                                <li id="dashboard">
+                                    <a href="dashboard.html">仪表盘</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- end header inner -->
+</header>
 <div class="Marketing-bg">
     <div class="container">
         <div class="row">
